# spelcpp

./: .clang-tidy  CMakeLists.txt  README.md
doc/: heuristics.md
src/: CMakeLists.txt  engine.cpp  engine.h  main.cpp
